[gd_scene load_steps=4 format=3 uid="uid://daian66ok5560"]

[ext_resource type="FontFile" uid="uid://du68wj6r6jpyj" path="res://assets/fonts/libel-suit-rg.otf" id="1_hs0wv"]
[ext_resource type="Script" path="res://scripts/dialog.gd" id="1_mtx3e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kth5n"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Dialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtx3e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.321569, 0.321569, 0.321569, 0.498039)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -104.0
offset_right = 175.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kth5n")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="text" type="RichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_hs0wv")
theme_override_font_sizes/normal_font_size = 18

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="btn_cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("1_hs0wv")
theme_override_font_sizes/font_size = 18

[node name="btn_ok" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("1_hs0wv")
theme_override_font_sizes/font_size = 18

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/HBoxContainer/btn_cancel" to="." method="_on_btn_cancel_focus_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/btn_cancel" to="." method="_on_btn_cancel_pressed"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/HBoxContainer/btn_ok" to="." method="_on_btn_ok_focus_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/btn_ok" to="." method="_on_btn_ok_pressed"]
